--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Demo",
   "main": "app.js",
   "scripts": {
-    "test": "nodemon app.js"
+    "start": "nodemon app.js"
   },
   "keywords": [
     "Graphql"
